--- a/index-10.html
+++ b/index-10.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link href="https://cdn.bootcss.com/jquery-mobile/1.4.5/jquery.mobile.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/1.11.1/jquery.js"></script>
@@ -13,12 +14,36 @@
     <script src="https://cdn.bootcss.com/jquery-mobile/1.4.5/jquery.mobile.js"></script>
 
     <style>
+      .header:nth-child(1){
+        font-size:20px;
+        /*float: left;*/
+        height: 50px;
+        line-height: 50px;
+        padding-left: 15px;
+      }
 
+      .header span{
+        float: right;
+      }
+
+      .header span img{
+        width:25px;
+        height:25px;
+      }
     </style>
   </head>
   <body>
-    <div data-role="header" data-position="fixed" >微信</div>
-    <div data-role="main"></div>
-    <div data-role="footer"></div>
+    <div data-role="header" data-position="fixed" data-theme="b" class="header"><div>微信 <span><img class="ui-btn" data-theme="b" src="./image/ic_search.png" alt="" > <img class="ui-btn" data-theme="b" src="./image/ic_more.png" alt=""> </span></div>
+    <div data-role="main">
+
+    </div>
+    <div data-role="footer" data-position="fixed">
+      <div class="ui-grid-c">
+        <div class="ui-block-a ui-btn" data-icon="delete" data-iconpos="top" data-inline="true">微信</div>
+        <div class="ui-block-b ui-btn" >微信</div>
+        <div class="ui-block-c ui-btn" >微信</div>
+        <div class="ui-block-d ui-btn" >微信</div>
+      </div>
+    </div>
   </body>
 </html>
